--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
-        username: ${{ github.actor }}  # Twoja nazwa użytkownika GitHub
+        username: ${{ github.anisalema }}  # Twoja nazwa użytkownika GitHub
         password: ${{ secrets.GHCR_TOKEN }}  # Token, który GitHub automatycznie generuje
         registry: ghcr.io  # GitHub Container Registry
 
