--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
-        username: ${{ github.anisalema }}  # Twoja nazwa użytkownika GitHub
-        password: ${{ secrets.GHCR_TOKEN }}  # Token, który GitHub automatycznie generuje
+        username: ${{ github.actor }}  # Twoja nazwa użytkownika GitHub (automatycznie pobierane z GitHub)
+        password: ${{ secrets.GHCR_TOKEN }}  # Token GitHub przechowywany w sekrecie
         registry: ghcr.io  # GitHub Container Registry
 
     # Budowanie i wypychanie obrazu za pomocą Kaniko
