--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -34,4 +34,4 @@ jobs:
           gcr.io/kaniko-project/executor:latest \
           --context=/workspace \
           --dockerfile=/workspace/.github/workflows/Dockerfile \
-          --destination=ghcr.io/${{ github.repository_owner }}/kaniko-test:latest
+          --destination=ghcr.io/${{ github.actor }}/kaniko-docker-pipeline/kaniko-test:latest
