--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -23,7 +23,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         username: ${{ github.actor }}  # Twoja nazwa użytkownika GitHub
-        password: ${{ secrets.GHCR_TOKEN }}  # Token, który GitHub automatycznie generuje
+        password: ${{ secrets.PASSWORD }}  # Token, który GitHub automatycznie generuje
         registry: ghcr.io  # GitHub Container Registry
 
     # Budowanie i wypychanie obrazu za pomocą Kaniko
@@ -33,5 +33,5 @@ jobs:
           -v $(pwd):/workspace \
           gcr.io/kaniko-project/executor:latest \
           --context=/workspace \
-          --dockerfile=/workspace/.github/workflows/Dockerfile \
-          --destination=ghcr.io/${{ github.actor }}/kaniko-docker-pipeline/kaniko-test:latest
+          --dockerfile=/workspace/Dockerfile \
+          --destination=ghcr.io/${{ github.repository_owner }}/kaniko-test:latest
